--- a/index.html
+++ b/index.html
@@ -4,21 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#FFD6E0">
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="icon-192.png">
   <title>CallWA</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/classic.min.css" />
-  <script src="https://cdn.jsdelivr.net/npm/@simonwep/pickr"></script>
+  
+  <!-- iro.js para colorWheel -->
+  <script src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"></script>
   <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
+  
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
-      font-family: sans-serif;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
       text-align: center;
       background: #fdf6f8;
       margin: 0;
       padding: 0;
+      color: #222;
+      transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
     }
     .status {
       display: inline-block;
@@ -29,25 +37,57 @@
     }
     .painel {
       max-width: 400px;
-      margin: auto;
+      margin: 20px auto;
       padding: 20px;
       border: 2px solid #ccc;
-      border-radius: 10px;
+      border-radius: 12px;
       background: #fff;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+      transition: background 0.3s;
     }
+
     input, button, select {
+      -webkit-appearance: none;
+      appearance: none;
       width: 100%;
       margin: 5px 0;
-      padding: 10px;
-      font-size: 1em;
-      box-sizing: border-box;
+      padding: 12px;
+      font-size: 1rem;
+      border: none;
+      border-radius: 10px;
+      background: #f3f3f3;
+      font-weight: 500;
     }
+
+    button {
+      background: #FFD6E0;
+      color: #333;
+      cursor: pointer;
+      transition: all 0.2s ease-in-out;
+    }
+    button:active {
+      transform: scale(0.97);
+      background: #ffb8c6;
+    }
+
     .botoes-grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 10px;
       margin-top: 10px;
     }
+
+    .botoes-modo {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 10px;
+      margin-top: 10px;
+    }
+    .botoes-modo button.ativo {
+      background: #ff3366;
+      color: white;
+    }
+
     .cor-preview {
       width: 50px;
       height: 50px;
@@ -55,9 +95,17 @@
       display: inline-block;
       margin: 10px auto;
       border: 1px solid #333;
+      background: #FFD6E0;
     }
+    #colorWheel {
+      margin: 10px auto;
+      display: flex;
+      justify-content: center;
+    }
+
     .esp-status {
       margin-top: 10px;
+      font-size: 0.9rem;
     }
     .esp-led {
       width: 16px;
@@ -67,6 +115,97 @@
       margin: 0 8px;
       background: #ccc;
     }
+
+    /* Botão Dark Mode central acima do título */
+    #toggleTheme {
+      display: block;
+      margin: 10px auto 15px auto;
+      background: none;
+      border: none;
+      font-size: 1.8rem;
+      cursor: pointer;
+      color: #444;
+      transition: transform 0.4s ease;
+    }
+
+    #toggleTheme.girando {
+      transform: rotate(360deg);
+    }
+
+    /* Animação nos corações do título */
+    .pulse {
+      display: inline-block;
+      animation: pulse 1.2s infinite alternate;
+    }
+
+    @keyframes pulse {
+      from { transform: scale(1); }
+      to { transform: scale(1.3); }
+    }
+
+    /* Dark mode */
+    body.dark {
+      background: #1c1c1c;
+      color: #f1f1f1;
+    }
+    body.dark .painel {
+      background: #2b2b2b;
+      border-color: #444;
+    }
+    body.dark input, 
+    body.dark button, 
+    body.dark select {
+      background: #3b3b3b;
+      color: #f1f1f1;
+    }
+    body.dark button {
+      background: #ff4d6d;
+      color: white;
+    }
+    body.dark button:active {
+      background: #ff3355;
+    }
+    body.dark .cor-preview {
+      border: 1px solid #aaa;
+    }
+    body.dark #toggleTheme {
+      color: #f1f1f1;
+    }
+
+    /* Splash Screen */
+    #splashScreen {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: #fdf6f8;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 3000;
+      transition: opacity 1s ease;
+    }
+
+    #splashScreen .logo {
+      width: 200px;
+      height: auto;
+      margin-bottom: 20px;
+      image-rendering: pixelated;
+      animation: pulseHeart 1.2s infinite alternate;
+    }
+
+    #splashScreen p {
+      font-family: 'Inter', sans-serif;
+      font-size: 1.2rem;
+      text-align: center;
+      color: #ff3366;
+    }
+
+    @keyframes pulseHeart {
+      from { transform: scale(1); }
+      to { transform: scale(1.2); }
+    }
+
     @media (max-width: 500px) {
       .painel {
         width: 95%;
@@ -79,8 +218,19 @@
   </style>
 </head>
 <body>
+
+  <!-- Splash Screen -->
+  <div id="splashScreen">
+    <img src="icon-512.png" alt="Logo Coração" class="logo">
+    <p>Com todo amor:<br><strong>Callebe Cruz</strong>.</p>
+  </div>
+
   <div class="painel">
-    <h2>❤️ CallWa ❤️</h2>
+    <!-- Botão Dark Mode no centro -->
+    <button id="toggleTheme">🌙</button>
+
+    <!-- Título com corações pulsantes -->
+    <h2><span class="pulse">❤️</span> CallWa <span class="pulse">❤️</span></h2>
 
     <label>Estado de Conexão: <span class="status" id="status"></span> <span id="ping">0</span>ms</label>
 
@@ -99,16 +249,23 @@
       <button onclick="enviarComando('desculpas')">Me desculpa</button>
       <button onclick="enviarComando('to_aqui')">Tô aquiii</button>
       <button onclick="enviarComando('surpresinha')">👀</button>
-      <button onclick="enviarComando('aspectro')">Aspectro</button>
+      <button onclick="enviarComando('bajulinho')">Bajulinho</button>
     </div>
 
     <label>Velocidade:</label>
-    <input id="velocidade" type="range" min="0" max="100" value="50" oninput="document.getElementById('velLabel').innerText = this.value + '%'">
-    <span id="velLabel">50%</span>
+    <input id="velocidade" type="range" min="0" max="100" value="50" 
+      oninput="document.getElementById('velLabel').innerText = this.value + '%'">
+    <div id="velLabel">50%</div>
 
     <label style="font-weight: bold">Aspectro de Cor:</label>
-    <div id="color-picker" style="margin-bottom: 10px;"></div>
+    <div id="colorWheel"></div>
     <div class="cor-preview" id="corPreview"></div>
+
+    <div class="botoes-modo">
+      <button id="modoEstatico" onclick="enviarModo('estatico', this)">Estático</button>
+      <button id="modoBlynk" onclick="enviarComando('aspectro')">Blynk</button>
+      <button id="modoSequencial" onclick="enviarModo('sequencial', this)">Sequencial</button>
+    </div>
 
     <div class="esp-status">
       <p>ESP32 Callebe: <span class="esp-led" id="statusCallebe"></span> | ESP32 Waléria: <span class="esp-led" id="statusWaleria"></span></p>
@@ -120,11 +277,49 @@
     const pingText = document.getElementById('ping');
     const ledCallebe = document.getElementById('statusCallebe');
     const ledWaleria = document.getElementById('statusWaleria');
+    const corPreview = document.getElementById('corPreview');
+    const toggleThemeBtn = document.getElementById('toggleTheme');
 
     let client;
     let corAtual = '#FFD6E0';
     let lastPing = Date.now();
     let lastSeen = { ESP_CALL: 0, ESP_WAL: 0 };
+
+    // Dark mode com preferências salvas
+    if (localStorage.getItem('theme') === 'dark') {
+      document.body.classList.add('dark');
+      toggleThemeBtn.textContent = '☀️';
+    } else if (localStorage.getItem('theme') === 'light') {
+      document.body.classList.remove('dark');
+      toggleThemeBtn.textContent = '🌙';
+    } else {
+      if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+        document.body.classList.add('dark');
+        toggleThemeBtn.textContent = '☀️';
+      }
+    }
+
+    // Alternar tema manualmente
+    toggleThemeBtn.addEventListener('click', () => {
+      document.body.classList.toggle('dark');
+      const isDark = document.body.classList.contains('dark');
+      toggleThemeBtn.textContent = isDark ? '☀️' : '🌙';
+      localStorage.setItem('theme', isDark ? 'dark' : 'light');
+
+      // animação de giro ao clicar
+      toggleThemeBtn.classList.add('girando');
+      setTimeout(() => toggleThemeBtn.classList.remove('girando'), 400);
+    });
+
+    // Splash Screen desaparecendo após 2.5s
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+        document.getElementById('splashScreen').style.opacity = '0';
+        setTimeout(() => {
+          document.getElementById('splashScreen').style.display = 'none';
+        }, 1000);
+      }, 3000);
+    });
 
     function conectarMQTT() {
       const options = {
@@ -189,6 +384,31 @@
         velocidade: velocidade
       };
 
+      publicarPayload(destinoFormatado, payload);
+    }
+
+    function enviarModo(modo, btn) {
+      if (!client || !client.connected) return;
+      const destino = document.getElementById('destino').value;
+
+      let destinoFormatado;
+      if (destino === 'waleria') destinoFormatado = 'ESP_WAL';
+      else if (destino === 'callebe') destinoFormatado = 'ESP_CALL';
+      else destinoFormatado = 'ALL';
+
+      const payload = {
+        from: "web",
+        to: destinoFormatado,
+        modo: modo
+      };
+
+      document.querySelectorAll('.botoes-modo button').forEach(b => b.classList.remove('ativo'));
+      btn.classList.add('ativo');
+
+      publicarPayload(destinoFormatado, payload);
+    }
+
+    function publicarPayload(destinoFormatado, payload) {
       if (destinoFormatado === 'ALL') {
         client.publish('luminaria/para_voce', JSON.stringify(payload));
         client.publish('luminaria/para_waleria', JSON.stringify(payload));
@@ -201,31 +421,17 @@
 
     window.onload = conectarMQTT;
 
-    const pickr = Pickr.create({
-      el: '#color-picker',
-      theme: 'classic',
-      default: '#FFD6E0',
-      swatches: [
-        '#F44336', '#E91E63', '#9C27B0', '#3F51B5',
-        '#2196F3', '#03A9F4', '#00BCD4', '#009688',
-        '#4CAF50', '#8BC34A', '#FFEB3B', '#FFC107',
-        '#FF9800', '#FF5722', '#795548', '#607D8B'
-      ],
-      components: {
-        preview: true,
-        opacity: true,
-        hue: true,
-        interaction: {
-          hex: true,
-          input: true,
-          save: true
-        }
-      }
+    // Inicializa o colorWheel do iro.js
+    const colorWheel = new iro.ColorPicker("#colorWheel", {
+      width: 220,
+      color: corAtual,
+      borderWidth: 1,
+      borderColor: "#ccc",
     });
 
-    pickr.on('change', (color) => {
-      corAtual = color.toHEXA().toString();
-      document.getElementById('corPreview').style.background = corAtual;
+    colorWheel.on("color:change", function (color) {
+      corAtual = color.hexString;
+      corPreview.style.background = corAtual;
     });
   </script>
 </body>
