--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
   <!-- Splash Screen -->
   <div id="splashScreen">
-    <img src="icon-512.png" alt="Logo Coração" class="logo">
+    <img src="Logo_CallWal.png" alt="Logo Coração" class="logo">
     <p>Com todo amor:<br><strong>Callebe Cruz</strong>.</p>
   </div>
 
