--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       transition: opacity 1s ease;
     }
 
-    #splashScreen .logo {
+    #splashScreen . {
       width: 200px;
       height: auto;
       margin-bottom: 20px;
@@ -221,7 +221,7 @@
 
   <!-- Splash Screen -->
   <div id="splashScreen">
-    <img src="Logo_CallWal.png" alt="Logo Coração" class="logo">
+    <img src="icon-512.png" alt="Logo Coração" class="logo">
     <p>Com todo amor:<br><strong>Callebe Cruz</strong>.</p>
   </div>
 
