--- a/index.html
+++ b/index.html
@@ -186,8 +186,9 @@
       transition: opacity 1s ease;
     }
 
-    #splashScreen . {
-      width: 200px;
+    #splashScreen .logo {
+      width: 30%;
+      max-width: 200px;
       height: auto;
       margin-bottom: 20px;
       image-rendering: pixelated;
