--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       transition: opacity 1s ease;
     }
 
-    #splashScreen .logo {
+    #splashScreen . {
       width: 30%;
       max-width: 200px;
       height: auto;
