--- a/index.html
+++ b/index.html
@@ -187,8 +187,7 @@
     }
 
     #splashScreen . {
-      width: 30%;
-      max-width: 200px;
+      width: clamp(120px, 25%, 200px);
       height: auto;
       margin-bottom: 20px;
       image-rendering: pixelated;
