--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       transition: opacity 1s ease;
     }
 
-    #splashScreen . {
+    #splashScreen .logo {
       width: clamp(120px, 25%, 200px);
       height: auto;
       margin-bottom: 20px;
