--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
     // Splash typewriter
     const splashMessage = 
-  "Com todo amor: de <strong>Callebe Cruz</strong>.<br>" +
+  "Com todo amor de <strong>Callebe Cruz</strong>.<br>" +
   "Uma dedicatória a <strong>Waléria Valério</strong>.";
 
 let charIndex = 0;
